# my-env

./: .env.example  .gitignore  Blog.MD  CLAUDE.md  Dockerfile  README.md  SUBMISSION.md  __init__.py  blog_post.md  client.py  demo.py  entrypoint.sh  inference.py  me.md  models.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  slides.html  steps.md  train.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
notebooks/: demo_and_test.ipynb  train_grpo.ipynb
scripts/: build_large_dataset.py  generate_plots.py  validate_env.py
server/: app.py  database.py  email_generator.py  environment.py  graders.py  multi_agent_env.py  reward.py  tasks.py
wandb_eval/: README.md  judge_eval.py  requirements.txt
